# gym-robomimic

./: README.md  pyproject.toml
gym_robomimic/: env.py
scripts/: convert_to_lerobot.py  wrist_camera.ipynb
